--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
         <!-- Mashead header-->
         <header class="masthead">
             <div class="container px-5">
-                <!--<div class="alert alert-warning" role="alert">
+                <div class="alert alert-warning" role="alert">
                     Lançamento 01/07/2023 
                 </div>
-                -->
+                
                 <div class="row gx-5 align-items-center">
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
