--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <div class="col-lg-6">
                         <!-- Mashead text and app badges-->
                         <div class="mb-5 mb-lg-0 text-center text-lg-start">
-                            <h1 lass="display-1 lh-1 mb-3">Sistema de Controle de Materias Offshore</h1>
+                            <h1 lass="display-1 lh-1 mb-3">Sistema de Controle de Materiais Offshore</h1>
                             <p class="lead fw-normal text-muted mb-5">Totalmente gratuito, fácil de utilizar, leve e rápido!</p>
                               
                             <div class="d-flex flex-column flex-lg-row align-items-center">
