--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                                 <div class="col-md-3 mb-5">
                                     <i class="bi bi-hammer icon-feature text-gradient d-block mb-3 text-center"></i>
-                                    <h3 class="font-alt text-center">Controle de Manuteções</h3>
+                                    <h3 class="font-alt text-center">Controle de Manutenções</h3>
                                     <p class="text-muted mb-0">
                                         <li>Controle das Manutenções realizadas nos Materiais e Partes Soltas.</li>
                                         <li>Histórico de Manutenções realizadas por Material/Parte Solta.</li>
