--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     <div class="col-md-6">
                         <h5 class="text-white">
                             Sistema totalmente gratuito para empresas do setor de Óleo e Gás.<br><br>
-                            Libere o potencial máximo de sua empresa com informações organizadas e não gerenciadas.<br><br>
+                            Libere o potencial máximo de sua empresa com informações organizadas.<br><br>
                         </h5>
                         <a class="btn btn-outline-light py-3 px-4 rounded-pill" href="https://startbootstrap.com/theme/new-age" target="_blank">Download de graça!</a>
                     </div>
