--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
                       </a>
                 </div>
             </div>
+    
         </nav>
+
         <!-- Mashead header-->
         <header class="masthead">
             <div class="container px-5">
@@ -100,7 +102,9 @@
                 </div>
             </div>
         </header>
-
+        <div class="bg-primary text-white text-center p-3">
+            Sistema na Versão 1.0 -  💡 Mais funcionalidades a caminho!
+          </div>
 
         <section id="features" style="background-color: #f1f1f1;">
             <div class="container px-5">
